[package]
name = "pairing-heap"
version = "0.1.0"
authors = ["Andrew Paseltiner <apaseltiner@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/apasel422/pairing-heap"
repository = "https://github.com/apasel422/pairing-heap"
documentation = "https://docs.rs/pairing-heap/"
keywords = ["collection", "priority-queue"]
description = "A priority queue based on a pairing heap."

[features]
binary_heap_extras = []

[dev-dependencies]
quickcheck = "0.2"
